--- a/src/templates/view-edit-toolbar.html
+++ b/src/templates/view-edit-toolbar.html
@@ -72,7 +72,7 @@
     </div>
 
     {% if Entity.type == 'items' and Entity.entityData.bookable %}
-      <a class='mr-2' title='{{ 'Book item'|trans }}' href='team.php?idtem={{ Entity.id }}'>
+      <a class='mr-2' title='{{ 'Book item'|trans }}' href='team.php?tab=1&item={{ Entity.id }}'>
         <div class='hl-hover-gray p-2 rounded'>
           <i class='fas fa-calendar-plus fa-fw'></i>
         </div>
