--- a/src/templates/show.html
+++ b/src/templates/show.html
@@ -20,8 +20,8 @@
   <hr>
   <div class='d-flex align-items-center'>
     <p class='smallgray mr-auto'>
-      <a href='#' class='color-medium' data-action='expand-all-entities' data-status='closed' data-expand='{{ 'Expand all'|trans }}' data-collapse='{{ 'Collapse all'|trans }}'>{{ 'Expand all'|trans }}</a>
-      - <a href='#' class='color-medium' data-action='select-all-entities'>{{ 'Select all'|trans }}</a>
+      <a href='#' data-action='expand-all-entities' data-status='closed' data-expand='{{ 'Expand all'|trans }}' data-collapse='{{ 'Collapse all'|trans }}'>{{ 'Expand all'|trans }}</a>
+      - <a href='#' data-action='select-all-entities'>{{ 'Select all'|trans }}</a>
       <span id='advancedSelectOptions' class='d-none'>
         - <a href='#' data-action='unselect-all-entities'>{{ 'Clear selection'|trans }}</a>
         - <a href='#' data-action='invert-entities-selection'>{{ 'Invert selection'|trans }}</a>
