--- a/src/templates/favtags-panel.html
+++ b/src/templates/favtags-panel.html
@@ -1,36 +1,32 @@
 <div class='side-panel' id='favtagsPanel' hidden>
-  <h3 class='p-2'>{{ 'Favorite tags'|trans }}</h3>
-  <div class='input-group p-2'>
-    <input data-action='favtags-search' class='form-control form-inline' type='text' placeholder='{{ 'Filter'|trans }}' />
-    <div class='input-group-append'>
-      <button data-action='clear-favtags-search' class='btn btn-outline-secondary'><i class='fas fa-times fa-fw'></i></button>
+  <div class='p-3'>
+    <h3 class='mb-3'>{{ 'Favorite tags'|trans }}</h3>
+    <div class='input-group'>
+      <input data-action='favtags-search' class='form-control form-inline' type='text' placeholder='{{ 'Filter'|trans }}' />
+      <div class='input-group-append'>
+        <button data-action='clear-favtags-search' class='btn btn-outline-secondary'><i class='fas fa-times fa-fw'></i></button>
+      </div>
     </div>
-  </div>
-  <div class='px-2'>
     <hr>
-  </div>
-  {% if favTagsArr|length == 0 %}
-  <div class='p-2'>
-    <p>{{ 'No favorite tags are present. Add an existing tag with the form below.'|trans }}</p>
-  </div>
-  {% endif %}
-  <div class='d-flex flex-column'>
-    {% for favtag in favTagsArr %}
-    <div data-action='add-tag-filter' data-tag='{{ favtag.tag }}' class='side-panel-item {{ App.Request.query.all('tags')[0] == favtag.tag ? 'selected' : ''}}'>
-      {{ favtag.tag }}<a href='#' class='float-right mr-2' data-id='{{ favtag.tags_id }}' data-action='destroy-favtags'><i class='fas fa-trash-alt'></i></a>
+    {% if favTagsArr|length == 0 %}
+      <p>{{ 'No favorite tags are present. Add an existing tag with the form below.'|trans }}</p>
+    {% endif %}
+    <div class='d-flex flex-column'>
+      {% for favtag in favTagsArr %}
+      <div data-action='add-tag-filter' data-tag='{{ favtag.tag }}' class='side-panel-item {{ App.Request.query.all('tags')[0] == favtag.tag ? 'selected' : ''}}'>
+        {{ favtag.tag }}<a href='#' class='float-right mr-2' data-id='{{ favtag.tags_id }}' data-action='destroy-favtags'><i class='fas fa-trash-alt'></i></a>
+      </div>
+      {% endfor %}
     </div>
-    {% endfor %}
-  </div>
-  <div class='px-2'>
     <hr>
-  </div>
-  {# ADD TAG AS FAVORITE INPUT #}
-  <div class='input-group mt-2 mb-3 p-2'>
-    <input id='createFavTagInput' data-autocomplete='tags' type='text' class='form-control form-inline createFavTagInput' aria-label='{{ 'Add a tag as favorite'|trans }}' placeholder='{{ 'Add a tag as favorite'|trans }}'>
-    <div class='input-group-append'>
-      <button class='btn btn-primary' type='button' title='{{ 'Add'|trans }}' data-action='create-todoitem' aria-label='{{ 'Add'|trans }}'>
-        <i class='fas fa-plus fa-fw' title='{{ 'Add'|trans }}'></i>
-      </button>
+    {# ADD TAG AS FAVORITE INPUT #}
+    <div class='input-group mt-2 mb-3'>
+      <input id='createFavTagInput' data-autocomplete='tags' type='text' class='form-control form-inline createFavTagInput' aria-label='{{ 'Add a tag as favorite'|trans }}' placeholder='{{ 'Add a tag as favorite'|trans }}'>
+      <div class='input-group-append'>
+        <button class='btn btn-primary' type='button' title='{{ 'Add'|trans }}' data-action='create-todoitem' aria-label='{{ 'Add'|trans }}'>
+          <i class='fas fa-plus fa-fw' title='{{ 'Add'|trans }}'></i>
+        </button>
+      </div>
     </div>
   </div>
 </div>
