--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -162,7 +162,7 @@
         <div class='input-group my-1 rounded'>
           <textarea id='commentsCreateArea' class='form-control p-2 brr-none' autocomplete='off' placeholder='{{ 'Add a comment'|trans }}' aria-label='Comment area'></textarea>
           <div class='input-group-append'>
-            <button class='btn btn-primary' type='button' data-action='create-comment'><i class='fas fa-paper-plane text-white'></i></button>
+            <button class='btn btn-primary' aria-label='{{ 'Add a comment'|trans }}' type='button' data-action='create-comment'><i class='fas fa-paper-plane text-white'></i></button>
           </div>
         </div>
       </div>
