--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -21,13 +21,15 @@
 .nav-link {
     color: #888;
     font-size: 90%;
+    line-height: 43px;
     margin-left: 15px;
     margin-right: 15px;
     /* fix navbar height getting smaller on profile/ucp/admin/… pages */
     min-height: 43px;
-    /* we want the border bottom to be same width as the text */
-    padding-left: 0 !important;
-    padding-right: 0 !important;
+    /* we want the border bottom to be same width as the text
+       and the text centered on the bar */
+    padding: 0 !important;
+    text-align: center;
     text-decoration: none;
     text-transform: uppercase;
 
@@ -39,7 +41,10 @@
 
     /* selected nav entry */
     &.active {
-        border-bottom: 6px $elabblue solid;
+        background-image: linear-gradient(to top, $elabblue 0%, $elabblue 100%);
+        background-position: center bottom;
+        background-repeat: no-repeat;
+        background-size: 100% 6px;
     }
 
     i {
