--- a/src/templates/uploads.html
+++ b/src/templates/uploads.html
@@ -123,7 +123,7 @@
                 </div>
 
                 <!-- IMPORTANT: here the data-href has the storage first and the filename last or 3Dmol will get confused with the format -->
-                <div class='viewer_3Dmoljs file-uploaded'
+                <div class='viewer_3Dmoljs'
                   data-href='app/download.php?storage={{ upload.storage }}&f={{ upload.long_name }}&name={{ upload.real_name }}'
                   data-style="{{ ext == 'pdb' ? 'cartoon:color=spectrum' : 'stick'}}"
                   data-backgroundcolor='0xffffff'
