--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -124,8 +124,10 @@
 <!-- METADATA view -->
 {% if Entity.entityData.metadata %}
   <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' class='d-inline togglable-section-title'><i class='fas fa-caret-down fa-fw mr-2'></i>{{ 'Extra fields'|trans }}</h3>
-  <div class='mt-2' id='extraFieldsDiv' data-save-hidden='extraFieldsDiv'>
-    {{ Entity.entityData.metadata|formatMetadata }}
+  <div class='mt-2 col-md-6' id='extraFieldsDiv' data-save-hidden='extraFieldsDiv'>
+    <ul class='list-group'>
+      {{ Entity.entityData.metadata|formatMetadata }}
+    </ul>
   </div>
   <hr>
 {% endif %}
