--- a/src/templates/editusers.html
+++ b/src/templates/editusers.html
@@ -41,7 +41,7 @@
     <h3 class='mb-3 p-2 pl-3 section-title'>{{ 'Users list'|trans }}</h3>
     <div class='pl-3'>
       {% if usersArr %}
-        <table id='usersTable' class='table' aria-describedby='users table' data-table-sort='true'>
+        <table id='usersTable' class='table' aria-label='users table' data-table-sort='true'>
           <thead>
             <tr>
               <th scope='col'>{{ 'User ID'|trans }}</th>
