get rid of jquery.rating.js plugin!
make the star rating pure scss
and align it with new design
10 files changed, 57 insertions(+), 430 deletions(-)
feelsgood.jpg

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -41,7 +41,7 @@ $text-muted: $medium;
 @import 'chemdoodle';
 @import 'footer';
 @import 'header';
-@import 'jquery-rating';
+@import 'star-rating';
 @import 'jsoneditor';
 @import 'ove';
 @import 'search-syntax-highlighting';
