remove highlight class on Filters button wrapping div

--- a/src/templates/show.html
+++ b/src/templates/show.html
@@ -34,7 +34,7 @@
         <i class='fas fa-fw fa-table'></i>
       </div>
 
-      <div class='hl-hover-gray rounded p-1 align-self-baseline mr-1' data-action='toggle-items-layout'>
+      <div class='mr-2' data-action='toggle-items-layout'>
       <button class='btn btn-secondary btn-sm' data-action='toggle-next' data-toggle-target='filtersDiv' aria-label='{{ 'Toggle filters'|trans }}'>
         <i class='fas fa-filter fa-fw mr-1 color-white'></i>{{ 'Filters'|trans }}
       </button>
