fix link for related experiments

--- a/src/templates/steps-links-view.html
+++ b/src/templates/steps-links-view.html
@@ -137,7 +137,7 @@
 
     <div title='{{ 'Show linked experiments'|trans }}' class='ml-3 mt-3'>
       <i class='fas fa-list mr-1 fa-fw'></i>
-      <a href='database.php?mode=show&related={{ Entity.id }}'>{{ 'Show linked experiments'|trans }}</a>
+      <a href='experiments.php?mode=show&related={{ Entity.id }}'>{{ 'Show linked experiments'|trans }}</a>
     </div>
     <hr>
   {% endif %}
