fix duplicate html attributes

--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -228,7 +228,7 @@
   <div class='row'>
     <div class='col-md-6'>
       <ul class='list-unstyled'>
-        <li class='mb-2' class='mb-2'><kbd>attachment:</kbd> yes, no, Simple or Quoted term</li>
+        <li class='mb-2'><kbd>attachment:</kbd> yes, no, Simple or Quoted term</li>
         <li class='mb-2'><kbd>author:</kbd> Simple or Quoted term</li>
         <li class='mb-2'><kbd>body:</kbd> Simple or Quoted term</li>
         <li class='mb-2'><kbd>category:</kbd> Simple or Quoted term</li>
