--- a/src/templates/ucp.html
+++ b/src/templates/ucp.html
@@ -272,7 +272,7 @@
       <div class='d-flex justify-content-between'>
         <label for='newpass' class='col-form-label'>{{ 'Modify your password'|trans }}</label>
         <div class='input-group col-md-3 px-0'>
-          <input class='form-control' id='newpass' autocomplete='new-password' name='newpass' type='password' pattern='.{8,}' autocomplete='new-password' />
+          <input class='form-control' id='newpass' name='newpass' type='password' pattern='.{8,}' autocomplete='new-password' />
           <div class='input-group-append'>
             <span class='btn btn-light input-border' tabindex='-1' data-action='toggle-password' data-target='newpass'><i class='fas fa-eye' aria-hidden='true'></i></span>
           </div>
