use svg for logo in header

--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -56,7 +56,7 @@
     </button>
     {% endif %}
     <!-- logo -->
-    <a href='index.php' title='{{ 'Go to index'|trans }}'><img class='navbar-brand d-xs-none d-sm-none d-lg-none d-xl-block' src='assets/images/logo-header.png' width='110' height='40' alt='elabftw logo' /></a>
+    <a href='index.php' title='{{ 'Go to index'|trans }}'><img class='navbar-brand d-xs-none d-sm-none d-lg-none d-xl-block' src='assets/images/logo-header.svg' width='110' height='40' alt='elabftw logo' /></a>
 
     {% set scriptName = App.Request.getScriptName|split('/')|last %}
     {% if App.Session.has('is_auth') %}
