wip: saml improvements

--- a/src/templates/create-idp-modal.html
+++ b/src/templates/create-idp-modal.html
@@ -92,6 +92,12 @@
           <label for='newidp-team_attr' class='col-form-label'>What attribute to look for the team name (optional)</label>
           <input class='form-control col-md-4' type='text' id='newidp-team_attr' name='team_attr' />
         </div>
+        <hr>
+
+        <div class='d-flex justify-content-between'>
+          <label for='newidp-orgid_attr' class='col-form-label'>What attribute to look for the internal id (optional)</label>
+          <input class='form-control col-md-4' type='text' id='newidp-orgid_attr' name='orgid_attr' />
+        </div>
 
       </div>
       <div class='modal-footer'>
