--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -42,6 +42,7 @@
           <label for='team'>{{ 'Team'|trans }}</label>
           <select name='team' class='form-control selectpicker' id='team' required data-show-subtext='true' data-live-search='true'>
             <option value='' selected disabled>{{ 'Select a team'|trans }}</option>
+            {# on this page, only show the visible teams #}
             {% for team in teamsArr|filter(v => v.visible == 1) %}
               <option value='{{ team.id }}'>{{ team.name }}</option>
             {% endfor %}
