don't allow deleting of user/team associaton of currently logged in team

--- a/src/templates/editusers.html
+++ b/src/templates/editusers.html
@@ -57,7 +57,10 @@
                     {% for team in user.teams %}
                       {% set currentTeam = user.teams|filter(t => t.id == team.id)|first %}
                       <div class='user-badge px-2 py-1 rounded mr-2 mt-2'>{{ team.name }}
-                        <span title='{{ 'Delete'|trans }}' class='hl-hover-gray p-1 rounded clickable m-1' data-action='destroy-user2team' data-userid='{{ user.userid }}' data-teamid='{{ team.id }}'><i class='fas fa-xmark' style='color:#29AEB9'></i></span>
+                        {# prevent deleting association of the team we are currently logged in #}
+                        {% if team.id != App.Users.userData.team %}
+                          <span title='{{ 'Delete'|trans }}' class='hl-hover-gray p-1 rounded clickable m-1' data-action='destroy-user2team' data-userid='{{ user.userid }}' data-teamid='{{ team.id }}'><i class='fas fa-xmark' style='color:#29AEB9'></i></span>
+                        {% endif %}
                         <div class='d-flex justify-content-between'>
                           <span class='form-group form-inline mt-2'>
                             <select class='form-control brr-none' autocomplete='off'>
